--- a/about_us.html
+++ b/about_us.html
@@ -20,18 +20,18 @@
             <nav>
                 <div class="nav-wrap">
                     <div class="logo">
-                        <a href="./index.html"><img src="./assests/images/home/logo.png" alt="logo"></a>
+                        <a href="./index.html"><img src="./assests/images/home/logo.svg" alt="logo"></a>
                     </div>
 
                     <label for="check" class="menu_icon"> <i class="bi bi-list"></i></label>
                     <input type="checkbox" id="check">
                     <ul>
                         <li id="opone"><a href="./index.html">Home</a></li>
-                        <li id="opone"><a href="./product.html">Products</a></li>
+                        <li id="opone"><a href="./products.html">Products</a></li>
                         <li><a href="#">
                                 <h3 class="home">About us</h3>
                             </a></li>
-                        <li id="opone"><a href="#contact-section">Contact us</a></li>
+                        <li id="opone"><a href="#contact_us">Contact us</a></li>
                     </ul>
                     <div class="icon">
                        
@@ -91,11 +91,11 @@
 
             </div>
         </section>
-        <section id="contact-section">
+        <section id="contact_us">
+            <h2>Contact Us</h2>
             <div class="container">
                 <!-- Left Section -->
                 <div class="contact-details">
-                    <h2>Contact Us</h2>
                     <p class="intro">
                         We’re here to help you put your best foot forward! <br>
                         Whether you have questions about your order, need help choosing the right pair, or just want to
@@ -151,7 +151,7 @@
             <div class="first-half">
                 <div class="footer-section brand">
                      <div class="logo">
-                        <img src="./assests/images/home/logo.png" alt="logo">
+                        <img src="./assests/images/home/logo.svg" alt="logo">
                 </div>
                     <p>Stylish and comfortable shoes<br>
                         designed to elevate your<br>
@@ -161,9 +161,9 @@
                 <div class="footer-section">
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="./product.html">Products</a></li>
-                        <li><a href="./about.html">About us</a></li>
-                        <li><a href="./about.html #contact-section">Contact us</a></li>
+                        <li><a href="./products.html">Products</a></li>
+                        <li><a href="./about_us.html">About us</a></li>
+                        <li><a href="./about_us.html#contact_us">Contact us</a></li>
                     </ul>
                 </div>
 
@@ -179,7 +179,7 @@
                 <div class="footer-section">
                     <h2>Follow Us</h2>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/?flo=true" target="_blank"><i class="bi bi-instagram"></i></a>
                         <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
                         <a href="https://x.com/?lang=en" target="_blank"><i class="bi bi-twitter-x"></i></a>
                     </div>
@@ -187,8 +187,9 @@
             </div>
             <div class="footer-bottom">
                 <p>© 2025 FeetHub. All rights reserved.</p>
-                <div class="policy-links">
-                    <a href="#">Terms & Conditions |</a>
+               <div class="policy-links">
+                    <a href="#">Terms & Conditions</a>
+                    <p>|</p>
                     <a href="#">Privacy Policy</a>
                 </div>
             </div>
