--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <div class="nav-wrap">
                     <div class="logo">
-                        <a href="./index.html"><img src="./assests/images/home/logo.png" alt="logo"></a>
+                        <a href="./index.html"><img src="./assests/images/home/logo.svg" alt="logo"></a>
                     </div>
 
                     <label for="check" class="menu_icon"> <i class="bi bi-list"></i></label>
@@ -28,9 +28,9 @@
                         <li><a href="#">
                                 <h3 class="home">Home</h3>
                             </a></li>
-                        <li id="opone"><a href="./product.html">Products</a></li>
-                        <li id="opone"><a href="./about.html">About us</a></li>
-                        <li id="opone"><a href="./about.html">Contact us</a></li>
+                        <li id="opone"><a href="./products.html">Products</a></li>
+                        <li id="opone"><a href="./about_us.html">About us</a></li>
+                        <li id="opone"><a href="./about_us.html#contact_us">Contact us</a></li>
                     </ul>
                     <div class="icon">
 
@@ -176,7 +176,7 @@
                                     <h4>Everyday Comfort for Everyone at Home</h4>
 
                                 </div>
-                                <a href="./product.html" class="button">Shop Flip-Flops</a>
+                                <a href="./products.html" class="button">Shop Flip-Flops</a>
                             </div>
                         </div>
                         <div class="product">
@@ -189,7 +189,7 @@
                                     <h2>Kids Footwear</h2>
                                     <h4>Playful Steps, Durable Design</h4>
                                 </div>
-                                <a href="./product.html" class="button">Shop Kids</a>
+                                <a href="./products.html" class="button">Shop Kids</a>
                             </div>
                         </div>
                         <div class="product">
@@ -201,7 +201,7 @@
                                     <h2>Family Sneakers</h2>
                                     <h4>Matching Styles for All Ages</h4>
                                 </div>
-                                <a href="./product.html" class="button">Shop Family Sneakers</a>
+                                <a href="./products.html" class="button">Shop Family Sneakers</a>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                                     <h4>Refined Shoes for Any Moment</h4>
 
                                 </div>
-                                <a href="./product.html" class="button">Shop Men’s</a>
+                                <a href="./products.html" class="button">Shop Men’s</a>
                             </div>
                         </div>
                         <div class="product">
@@ -230,7 +230,7 @@
                                     <h2>Women's Shoes</h2>
                                     <h4>Elegance & Trend for Her</h4>
                                 </div>
-                                <a href="./product.html" class="button">Shop Women’s</a>
+                                <a href="./products.html" class="button">Shop Women’s</a>
                             </div>
                         </div>
                         <div class="product">
@@ -242,7 +242,7 @@
                                     <h2>Formal Footwear</h2>
                                     <h4>Perfect Picks for Work & Events</h4>
                                 </div>
-                                <a href="./product.html" class="button">Shop Formal Wear</a>
+                                <a href="./products.html" class="button">Shop Formal Wear</a>
                             </div>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
                                     <h4>Light & Breezy for Warm Days</h4>
 
                                 </div>
-                                <a href="./product.html" class="button">Shop Sandals</a>
+                                <a href="./products.html" class="button">Shop Sandals</a>
                             </div>
                         </div>
                         <div class="product">
@@ -271,7 +271,7 @@
                                     <h2>Winter Boots</h2>
                                     <h4>Stay Warm & Stylish</h4>
                                 </div>
-                                <a href="./product.html" class="button">Shop Boots</a>
+                                <a href="./products.html" class="button">Shop Boots</a>
                             </div>
                         </div>
                         <div class="product">
@@ -283,7 +283,7 @@
                                     <h2>Rainy Day Footwear</h2>
                                     <h4>Dry Steps in Wet Weather</h4>
                                 </div>
-                                <a href="./product.html" class="button">Shop Rainwear</a>
+                                <a href="./products.html" class="button">Shop Rainwear</a>
                             </div>
                         </div>
                     </div>
@@ -362,7 +362,7 @@
             <div class="first-half">
             <div class="footer-section brand">
                 <div class="logo">
-                        <img src="./assests/images/home/logo.png" alt="logo">
+                        <img src="./assests/images/home/logo.svg" alt="logo">
                 </div>
                 <p>Stylish and comfortable shoes<br>
                     designed to elevate your<br>
@@ -372,9 +372,9 @@
             <div class="footer-section">
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="./product.html">Products</a></li>
-                        <li><a href="./about.html">About us</a></li>
-                        <li><a href="./about.html#contact-section">Contact us</a></li>
+                    <li><a href="./products.html">Products</a></li>
+                        <li><a href="./about_us.html">About us</a></li>
+                        <li><a href="./about_us.html#contact_us">Contact us</a></li>
                 </ul>
             </div>
 
@@ -390,7 +390,7 @@
             <div class="footer-section">
                 <h2>Follow Us</h2>
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/?flo=true" target="_blank"><i class="bi bi-instagram"></i></a>
                     <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
                     <a href="https://x.com/?lang=en" target="_blank"><i class="bi bi-twitter-x"></i></a>
                 </div>
@@ -398,8 +398,9 @@
             </div>
             <div class="footer-bottom">
                 <p>© 2025 FeetHub. All rights reserved.</p>
-                <div class="policy-links">
-                    <a href="#">Terms & Conditions |</a>
+               <div class="policy-links">
+                    <a href="#">Terms & Conditions</a>
+                    <p>|</p>
                     <a href="#">Privacy Policy</a>
                 </div>
             </div>
