--- a/product_two.html
+++ b/product_two.html
@@ -21,18 +21,18 @@
             <nav>
                 <div class="nav-wrap">
                     <div class="logo">
-                        <a href="./index.html"><img src="./assests/images/home/logo.png" alt="logo"></a>
+                        <a href="./index.html"><img src="./assests/images/home/logo.svg" alt="logo"></a>
                     </div>
 
                     <label for="check" class="menu_icon"> <i class="bi bi-list"></i></label>
                     <input type="checkbox" id="check">
                     <ul>
                         <li id="opone"><a href="./index.html">Home</a></li>
-                        <li><a href="./product.html">
+                        <li><a href="./products.html">
                                 <h3 class="home">Products</h3>
                             </a></li>
-                        <li id="opone"><a href="./about.html">About us</a></li>
-                        <li id="opone"><a href="./about.html">Contact us</a></li>
+                        <li id="opone"><a href="./about_us.html">About us</a></li>
+                        <li id="opone"><a href="./about_us.html#contact_us">Contact us</a></li>
                     </ul>
                     <div class="icon">
 
@@ -317,7 +317,7 @@
             <div class="first-half">
                 <div class="footer-section brand">
                     <div class="logo">
-                        <img src="./assests/images/home/logo.png" alt="logo">
+                        <img src="./assests/images/home/logo.svg" alt="logo">
                     </div>
                     <p>Stylish and comfortable shoes<br>
                         designed to elevate your<br>
@@ -327,9 +327,9 @@
                 <div class="footer-section">
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="./product.html">Products</a></li>
-                        <li><a href="./about.html">About us</a></li>
-                        <li><a href="./about.html#contact-section">Contact us</a></li>
+                        <li><a href="./products.html">Products</a></li>
+                        <li><a href="./about_us.html">About us</a></li>
+                        <li><a href="./about_us.html#contact_us">Contact us</a></li>
                     </ul>
                 </div>
 
@@ -345,7 +345,7 @@
                 <div class="footer-section">
                     <h2>Follow Us</h2>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i
+                        <a href="https://www.instagram.com/?flo=true" target="_blank"><i
                                 class="bi bi-instagram"></i></a>
                         <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
                         <a href="https://x.com/?lang=en" target="_blank"><i class="bi bi-twitter-x"></i></a>
@@ -355,7 +355,8 @@
             <div class="footer-bottom">
                 <p>© 2025 FeetHub. All rights reserved.</p>
                 <div class="policy-links">
-                    <a href="#">Terms & Conditions |</a>
+                    <a href="#">Terms & Conditions</a>
+                    <p>|</p>
                     <a href="#">Privacy Policy</a>
                 </div>
             </div>
