--- a/form.html
+++ b/form.html
@@ -20,18 +20,18 @@
             <nav>
                 <div class="nav-wrap">
                     <div class="logo">
-                        <a href="./index.html"><img src="./assests/images/home/logo.png" alt="logo"></a>
+                        <a href="./index.html"><img src="./assests/images/home/logo.svg" alt="logo"></a>
                     </div>
 
                     <label for="check" class="menu_icon"> <i class="bi bi-list"></i></label>
                     <input type="checkbox" id="check">
                     <ul>
                         <li id="opone"><a href="./index.html">Home</a></li>
-                        <li><a href="./product.html">
+                        <li><a href="./products.html">
                                 <h3 class="home">Products</h3>
                             </a></li>
-                        <li id="opone"><a href="./about.html">About us</a></li>
-                        <li id="opone"><a href="./about.html">Contact us</a></li>
+                        <li id="opone"><a href="./about_us.html">About us</a></li>
+                        <li id="opone"><a href="./about_us.html#contact_us">Contact us</a></li>
                     </ul>
                     <div class="icon">
 
@@ -52,12 +52,12 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label>First Name</label>
-                                <input type="text" placeholder="Vimala" id="user_name" onkeyup="forName()"/>
+                                <input type="text" placeholder="Vimala" id="user_name" onkeyup="validateFirstName()"/>
                                 <span id="name_err"></span>
                             </div>
                             <div class="form-group">
                                 <label>Last Name</label>
-                                <input type="text" placeholder="Jothi" id="last_name" onkeyup="forLastName()"/>
+                                <input type="text" placeholder="Jothi" id="last_name" onkeyup="validateLastName()"/>
                                 <span id="last_err"></span>
                             </div>
                         </div>
@@ -65,7 +65,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="state">State</label>
-                                <select id="state" onchange="populateDistricts()">
+                                <select id="state" onchange="populateDistricts()" required>
                                     <option value="">Select State</option>
                                     <option value="Tamil Nadu">Tamil Nadu</option>
                                     <option value="Kerala">Kerala</option>
@@ -84,19 +84,19 @@
 
                         <div class=" full-width">
                             <label>Address</label>
-                            <textarea placeholder="Type your Address" id="address" onkeyup="foraddress()"></textarea>
+                            <textarea placeholder="Type your Address" id="address" onkeyup="validateAddress()"></textarea>
                             <span id="address_err"></span>
                         </div>
 
                         <div class="form-group ">
                             <label>Landmark</label>
-                            <input type="text" placeholder="Vetri cinemas Opp" id="landmark" onkeyup="forlandmark()"/>
+                            <input type="text" placeholder="Vetri cinemas Opp" id="landmark" onkeyup="validateLandmark()"/>
                             <span id="landmark_err"></span>
                         </div>
 
                         <div class="form-group ">
                             <label>Mobile Number</label>
-                            <input type="text" placeholder="6381182890" id="userNum" onkeyup="forNum()"/>
+                            <input type="text" placeholder="6381182890" id="userNum" onkeyup="validateMobile()"/>
                             <span id="num_err"></span>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
             <div class="first-half">
                 <div class="footer-section brand">
                      <div class="logo">
-                        <img src="./assests/images/home/logo.png" alt="logo">
+                        <img src="./assests/images/home/logo.svg" alt="logo">
                 </div>
                     <p>Stylish and comfortable shoes<br>
                         designed to elevate your<br>
@@ -156,9 +156,9 @@
                 <div class="footer-section">
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="./product.html">Products</a></li>
-                        <li><a href="./about.html">About us</a></li>
-                        <li><a href="./about.html#contact-section">Contact us</a></li>
+                        <li><a href="./products.html">Products</a></li>
+                        <li><a href="./about_us.html">About us</a></li>
+                        <li><a href="./about_us.html#contact_us">Contact us</a></li>
                     </ul>
                 </div>
 
@@ -174,7 +174,7 @@
                 <div class="footer-section">
                     <h2>Follow Us</h2>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i
+                        <a href="https://www.instagram.com/?flo=true" target="_blank"><i
                                 class="bi bi-instagram"></i></a>
                         <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
                         <a href="https://x.com/?lang=en" target="_blank"><i class="bi bi-twitter-x"></i></a>
@@ -184,7 +184,8 @@
             <div class="footer-bottom">
                 <p>© 2025 FeetHub. All rights reserved.</p>
                 <div class="policy-links">
-                    <a href="#">Terms & Conditions |</a>
+                    <a href="#">Terms & Conditions</a>
+                    <p>|</p>
                     <a href="#">Privacy Policy</a>
                 </div>
             </div>
