--- a/products.html
+++ b/products.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
             <nav>
                 <div class="nav-wrap">
                     <div class="logo">
-                        <a href="./index.html"><img src="./assests/images/home/logo.png" alt="logo"></a>
+                        <a href="./index.html"><img src="./assests/images/home/logo.svg" alt="logo"></a>
                     </div>
 
                     <label for="check" class="menu_icon"> <i class="bi bi-list"></i></label>
@@ -31,8 +32,8 @@
                         <li><a href="#">
                                 <h3 class="home">Products</h3>
                             </a></li>
-                        <li id="opone"><a href="./about.html">About us</a></li>
-                        <li id="opone"><a href="./about.html">Contact us</a></li>
+                        <li id="opone"><a href="./about_us.html">About us</a></li>
+                        <li id="opone"><a href="./about_us.html#contact_us">Contact us</a></li>
                     </ul>
                     <div class="icon">
 
@@ -85,7 +86,7 @@
                 <h1>Men's Footwear</h1>
                 <div class="cards">
                     <a href="./product_two.html">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/men1.png" alt="images!">
 
@@ -105,7 +106,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/men2.png" alt="images!">
 
@@ -125,7 +126,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/men3.png" alt="images!">
 
@@ -145,7 +146,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/men4.png" alt="images!">
 
@@ -165,7 +166,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/men5.png" alt="images!">
 
@@ -185,7 +186,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/men6.png" alt="images!">
 
@@ -212,7 +213,7 @@
                 <h1>Women's Collection</h1>
                 <div class="cards">
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/womens.png" alt="images!">
 
@@ -232,7 +233,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/women2.png" alt="images!">
 
@@ -252,7 +253,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/women3.png" alt="images!">
 
@@ -272,7 +273,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/women4.png" alt="images!">
 
@@ -292,7 +293,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/women5.png" alt="images!">
 
@@ -312,7 +313,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/women6.png" alt="images!">
 
@@ -339,7 +340,7 @@
                 <h1>Kids' Picks</h1>
                 <div class="cards">
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/kid1.png" alt="images!">
 
@@ -359,7 +360,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/kid2.png" alt="images!">
 
@@ -379,7 +380,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/kid3.png" alt="images!">
 
@@ -399,7 +400,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/kids4.png" alt="images!">
 
@@ -419,7 +420,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/kids5.png" alt="images!">
 
@@ -439,7 +440,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="product">
+                        <div class="product" data-aos="zoom-in">
                             <div class="image">
                                 <img src="./assests/images/product/kids6.png" alt="images!">
 
@@ -468,7 +469,7 @@
             <div class="first-half">
                 <div class="footer-section brand">
                     <div class="logo">
-                        <img src="./assests/images/home/logo.png" alt="logo">
+                        <img src="./assests/images/home/logo.svg" alt="logo">
                     </div>
                     <p>Stylish and comfortable shoes<br>
                         designed to elevate your<br>
@@ -478,9 +479,9 @@
                 <div class="footer-section">
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="./product.html">Products</a></li>
-                        <li><a href="./about.html">About us</a></li>
-                        <li><a href="./about.html#contact-section">Contact us</a></li>
+                        <li><a href="./products.html">Products</a></li>
+                        <li><a href="./about_us.html">About us</a></li>
+                        <li><a href="./about_us.html#contact_us">Contact us</a></li>
                     </ul>
                 </div>
 
@@ -496,7 +497,7 @@
                 <div class="footer-section">
                     <h2>Follow Us</h2>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i
+                        <a href="https://www.instagram.com/?flo=true" target="_blank"><i
                                 class="bi bi-instagram"></i></a>
                         <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
                         <a href="https://x.com/?lang=en" target="_blank"><i class="bi bi-twitter-x"></i></a>
@@ -514,7 +515,10 @@
 
 
     </footer>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script>
         function toggleDropdown() {
             document.getElementById("dropdownMenu").classList.toggle("show");
@@ -522,7 +526,7 @@
 
         // Close dropdown when clicking outside
         window.onclick = function (event) {
-            if (!event.target.closest('.dropbtn')) {   
+            if (!event.target.closest('.dropbtn')) {
                 let dropdowns = document.getElementsByClassName("dropdown-content");
                 for (let i = 0; i < dropdowns.length; i++) {
                     let openDropdown = dropdowns[i];
