--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FeetHub-About</title>
-            <link rel="shortcut icon" href="./assests/icons/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assests/icons/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -34,7 +34,7 @@
                         <li id="opone"><a href="#contact_us">Contact us</a></li>
                     </ul>
                     <div class="icon">
-                       
+
                         <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
                         <a href="#"><i class="fa-regular fa-circle-user"></i></a>
                     </div>
@@ -120,7 +120,8 @@
                     <div class="info-block">
                         <h4><i class="bi bi-hand-thumbs-up"></i>&nbsp;&nbsp;&nbsp;&nbsp;Follow Us</h4>
                         <div class="social-icons">
-                            <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i
+                                    class="bi bi-instagram"></i></a>
                             <a href="https://www.linkedin.com/feed/" target="_blank"><i class="bi bi-linkedin"></i></a>
                             <a href="https://www.threads.com/?hl=en" target="_blank"><i class="bi bi-threads"></i></a>
                             <a href="https://www.youtube.com/" target="_blank"><i class="bi bi-youtube"></i></a>
@@ -150,9 +151,9 @@
         <div class="footer-wrapper">
             <div class="first-half">
                 <div class="footer-section brand">
-                     <div class="logo">
+                    <div class="logo">
                         <img src="./assests/images/home/logo.svg" alt="logo">
-                </div>
+                    </div>
                     <p>Stylish and comfortable shoes<br>
                         designed to elevate your<br>
                         everyday look with ease.</p>
@@ -179,7 +180,8 @@
                 <div class="footer-section">
                     <h2>Follow Us</h2>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/?flo=true" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/?flo=true" target="_blank"><i
+                                class="bi bi-instagram"></i></a>
                         <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
                         <a href="https://x.com/?lang=en" target="_blank"><i class="bi bi-twitter-x"></i></a>
                     </div>
@@ -187,7 +189,7 @@
             </div>
             <div class="footer-bottom">
                 <p>© 2025 FeetHub. All rights reserved.</p>
-               <div class="policy-links">
+                <div class="policy-links">
                     <a href="#">Terms & Conditions</a>
                     <p>|</p>
                     <a href="#">Privacy Policy</a>
@@ -195,25 +197,27 @@
             </div>
         </div>
     </footer>
+    <button id="floatBtn" class="floating-btn"><i class="bi bi-chevron-up"></i></button>
     <script src="./js/query.js"></script>
+    <script src="./js/script.js"></script>
     <script>
         // accordion
-$(document).ready(function () {
-  $('.common .name').click(function () {
-    const parent = $(this).parent();
+        $(document).ready(function () {
+            $('.common .name').click(function () {
+                const parent = $(this).parent();
 
-    if (!parent.hasClass('active')) {
-      $('.common').removeClass('active');
-      $('.common .content').slideUp();
+                if (!parent.hasClass('active')) {
+                    $('.common').removeClass('active');
+                    $('.common .content').slideUp();
 
-      parent.addClass('active');
-      parent.find('.content').slideDown();
-    } else {
-      parent.removeClass('active');
-      parent.find('.content').slideUp();
-    }
-  });
-});
+                    parent.addClass('active');
+                    parent.find('.content').slideDown();
+                } else {
+                    parent.removeClass('active');
+                    parent.find('.content').slideUp();
+                }
+            });
+        });
     </script>
 </body>
 
